Add async and multithreaded product fetch demo with new dependencies
- Added `async_demo.py` to demonstrate fetching data using both multithreaded and asynchronous approaches.
- Introduced new dependencies: `httpx`, `rich`, and updated `redis` version in `pyproject.toml` and `uv.lock`.
- Updated `pyproject.toml` to include optional `http2` support with `httpx`.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13.7"
 dependencies = [
     "dotenv>=0.9.9",
-    "redis>=7.0.1",
+    "httpx[http2]>=0.28.1",
+    "redis>=7.1.0",
+    "rich>=14.2.0",
 ]
